package lapr4.customermanagement.domain;

public enum CustomerStatus {
    CREATED, INFRINGEMENT, DELETED
}
